tests/machine/x/swift/group_by_multi_join.error
/tmp/TestSwiftCompiler_VMValid_Goldengroup_by_multi_join2939875047/001/main.swift:51:9: error: cannot convert value of type '[(part: Int, value: Double)]' to closure result type '[Filtered]'
49 | 		}
50 | 	}
51 | 	return _res
   |         |- error: cannot convert value of type '[(part: Int, value: Double)]' to closure result type '[Filtered]'
   |         `- note: arguments to generic parameter 'Element' ('(part: Int, value: Double)' and 'Filtered') are expected to be equal
52 | }())
53 | var grouped = { () -> [Any] in
